# brush

./: Cargo.toml  README.md
crates/brush-app/src/: app.rs
crates/brush-app/src/panels/: tracing_debug.rs
crates/brush-cli/src/: ui.rs
crates/brush-dataset/src/: splat_import.rs
crates/brush-dataset/src/formats/: colmap.rs  mod.rs  nerf_synthetic.rs  nerfstudio.rs
crates/brush-prefix-sum/: Cargo.toml
crates/brush-prefix-sum/benches/: prefix_sum_benchmark.rs
crates/brush-prefix-sum/src/: lib.rs
crates/brush-process/src/process_loop/: train_stream.rs
crates/brush-render/src/: burn_glue.rs  gaussian_splats.rs  lib.rs  render.rs
crates/brush-render/src/shaders/: project_forward.wgsl  rasterize.wgsl
crates/brush-train/src/: burn_glue.rs  kernels.rs  train.rs
crates/brush-train/src/shaders/: rasterize_backwards.wgsl
crates/brush-viewer/src/: train_loop.rs
crates/brush-viewer/src/panels/: scene.rs
crates/sync-span/src/: lib.rs
