[package]
name = "brush-prefix-sum"
edition.workspace = true
version.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
brush-kernel.path = "../brush-kernel"
burn.workspace = true
burn-wgpu.workspace = true
burn-cubecl.workspace = true
naga_oil.workspace = true
wgpu.workspace = true

[build-dependencies]
brush-wgsl.path = "../brush-wgsl"
miette.workspace = true

[lints]
workspace = true

[[bench]]
name = "prefix_sum_benchmark"
harness = false